--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: #32695d;
 }
 .navbar .links {
   margin-left: auto;
@@ -26,7 +26,7 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #f1356d;
+  color: #32695d;
 }
 .content {
   max-width: 600px;
@@ -45,7 +45,7 @@
 }
 .blog-preview h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: #32695d;
   margin-bottom: 8px;
 }
 .blog-preview a {
@@ -55,14 +55,14 @@
 /* blog details page */
 .blog-details h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: #32695d;
   margin-bottom: 10px;
 }
 .blog-details div {
   margin: 20px 0;
 }
 .blog-details button {
-  background: #f1356d;
+  background: #32695d;
   color: #fff;
   border: 0;
   padding: 8px;
@@ -82,7 +82,7 @@
 }
 .create h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: #32695d;
   margin-bottom: 30px;
 }
 .create input,
@@ -96,7 +96,7 @@
   display: block;
 }
 .create button {
-  background: #f1356d;
+  background: #32695d;
   color: #fff;
   border: 0;
   padding: 8px;
